--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deja-vu",
   "version": "0.0.0",
-  "description": "Filters out duplicitous event receipts as long as we can identify an events original timestamp",
+  "description": "Filters out duplicitous event receipts"
   "main": "index.js",
   "scripts": {
     "test": "jasmine"
@@ -13,7 +13,10 @@
   "keywords": [
     "redis",
     "de-dupe",
-    "filter"
+    "filter",
+    "event",
+    "receipt",
+    "duplicate"
   ],
   "author": "Trey Tacon <trey@mixmax.com> (https://mixmax.com)",
   "license": "MIT",
