Fix syntax error

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deja-vu",
   "version": "0.0.0",
-  "description": "Filters out duplicitous event receipts"
+  "description": "Filters out duplicitous event receipts",
   "main": "index.js",
   "scripts": {
     "test": "jasmine"
