--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deja-vu",
+  "name": "@mixmaxhq/deja-vu",
   "version": "2.0.0",
   "description": "Filters out duplicitous event receipts",
   "main": "index.js",
