--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Filters out duplicitous event receipts",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine",
-    "lint": "eslint ."
+    "ci": "npm run lint",
+    "lint": "eslint .",
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
